added steps to ibl2psytrack to loop through all of a mouse's data

--- a/ibl2psytrack copy.ipynb
+++ b/ibl2psytrack copy.ipynb
@@ -6,18 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils as ut\n",
-    "import ibllib.io.raw_data_loaders as raw\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
+    "import utils as ut"
    ]
   },
   {
@@ -26,12 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function for changing values to binary(ish) format\n",
-    "def changeVals(x):\n",
-    "    if x < 0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 2"
+    "import ibllib.io.raw_data_loaders as raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
    ]
   },
   {
@@ -39,23 +32,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Putting Multiple Days of Data into a Single npz File\n",
+    "\n",
+    "### Getting Training Session Paths\n",
+    "* get user choice of a folder for that mouse \n",
+    "* generate dict w/ the file paths of each day as keys\n",
+    "* for each key, generate a list of the file paths contained w/in that folder  \n",
+    "\n",
     "### Getting the number of trials in each day \n",
     "* Run the same data processing as was used on a single file (above) on each file in the list of file paths for each day\n",
     "    * create an empty list for day lengths\n",
-    "    * get the number of trials in each day and append it to the list\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Packing all data from one mouse into a single npz file\n",
-    "### Getting the path to the daily data files for a given mouse, and then fetching the session folder file paths\n",
-    "* get user choice of a folder for that mouse \n",
-    "* generate dict w/ the file paths of each day as keys\n",
-    "* for each key, generate a list of the file paths contained w/in that folder  "
+    "    * get the number of trials in each day and append it to the list"
    ]
   },
   {
@@ -67,8 +54,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-11 21:57:17.821 python[24179:17631791] +[CATransaction synchronize] called within transaction\n",
-      "2023-02-11 21:57:17.921 python[24179:17631791] +[CATransaction synchronize] called within transaction\n"
+      "2023-02-10 17:35:00.731 python[22416:17393683] +[CATransaction synchronize] called within transaction\n",
+      "2023-02-10 17:35:00.895 python[22416:17393683] +[CATransaction synchronize] called within transaction\n"
      ]
     },
     {
@@ -125,28 +112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mouse folder path: /Users/joshuadamato/Documents/adesnikLab/sampleBehaviorData/MBOT53_013\n",
-      "\tMouse name: MBOT53_013 \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "mouseFolderPath\n",
     "# there are multiple slash symbols in mouseFolderPath, so we need to find the last one and then take the substring after that last slash symbol\n",
     "mouseName = mouseFolderPath[mouseFolderPath.rfind('/')+1:]\n",
-    "print(\"Mouse folder path: {mfp}\\n\\tMouse name: {mn} \\n\".format(mn=mouseName, mfp=mouseFolderPath))"
+    "mouseName"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -203,13 +181,12 @@
        " '2022-07-28': ['/Users/joshuadamato/Documents/adesnikLab/sampleBehaviorData/MBOT53_013/2022-07-28/001']}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# stores the file paths for each session in a given day in a dictionary, with the key being date and value being a list of file paths\n",
     "dailySessions_dict = {}\n",
     "for sessionPath in mouseSessionsPaths_lst:\n",
     "    dailySessions_dict[sessionPath[-10:]] = ut.getSubfolders(sessionPath)\n",
@@ -218,157 +195,17 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Forcing number of trials to match if encoder_trial_info file is truncated "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fetchEncoderPlusData(session):\n",
-    "    \"\"\"\n",
-    "    Fetches and returns the data (via raw.load_data) and the encoder trial info (via raw.load_encoder_trials) for a given session. If the data is empty or encoder trial info\n",
-    "    \"\"\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# matchDfLens should take the 'data' and 'trialinfo_df' dataframes and make sure that they are the same length\n",
-    "def matchDfLens(data, trialinfo_df):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "warning, 57 trial's is/are missing from the trialinfo_df from 2022-10-18, session 002\n",
-      "Error: trialinfo_df[name].values is empty.\n",
-      "Error: trialinfo_df[name].values is empty.\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[58], line 80\u001b[0m\n\u001b[1;32m     78\u001b[0m nameChange_lst \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39ms1\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39ms2\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     79\u001b[0m \u001b[39mfor\u001b[39;00m idx,name \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(nameChange_lst):\n\u001b[0;32m---> 80\u001b[0m     D[\u001b[39m'\u001b[39m\u001b[39minputs\u001b[39m\u001b[39m'\u001b[39m][name] \u001b[39m=\u001b[39m outputs[idx]\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "D = dict()\n",
-    "D['name'] = mouseName\n",
-    "D['y'] = np.array([])\n",
-    "for key in dailySessions_dict.keys():\n",
-    "    for session in dailySessions_dict[key]:\n",
-    "        data = raw.load_data(session)\n",
-    "        try:\n",
-    "            correcttrials_lst = [d['trial_correct'] for d in data]\n",
-    "            trialinfo_df = raw.load_encoder_trial_info(session)\n",
-    "        except pd.errors.EmptyDataError:\n",
-    "            # exception handles the case where the encoder_trial_info file is empty\n",
-    "            print(f\"EmptyDataError raised. Data missing for {key} session {session[-3:]}. Skipping to next iteration.\")\n",
-    "            continue\n",
-    "        except TypeError:\n",
-    "            # exception handles the case where raw.load_data returns an empty list \n",
-    "            print(f\"TypeError raised. Data missing for {key} session {session[-3]}. Skipping to next iteration.\")\n",
-    "            continue\n",
-    "\n",
-    "\n",
-    "        ######### abstract this away #########\n",
-    "        # correcting for the possibility of the last trial not being saved in the encoder_trial_info file \n",
-    "        diff = len(trialinfo_df) - len(correcttrials_lst)\n",
-    "        if diff > 0:\n",
-    "            trialinfo_df = trialinfo_df[:-diff]\n",
-    "        elif diff < 0:\n",
-    "            correcttrials_lst = correcttrials_lst[:diff]\n",
-    "        # since it is relatively expected that a trial is missing form the encoder data, we will only print a warning if the difference is greater than 10\n",
-    "        if abs(diff) > 10:\n",
-    "            if diff > 0:\n",
-    "                print(f'warning, {diff} trial\\'s is/are missing from the correcttrials_list dictionary from {key}, session {session[-3:]}')\n",
-    "            else:\n",
-    "                print(f'warning, {-1*diff} trial\\'s is/are missing from the trialinfo_df from {key}, session {session[-3:]}')\n",
-    "\n",
-    "        assert (len(trialinfo_df) == len(correcttrials_lst)), 'trialinfo_df and correcttrials_lst are not the same length'\n",
-    "       ####### end first abstraction #######\n",
-    "\n",
-    "\n",
-    "        # avoids 'SettingWithCopyWarning' generated by Pandas when changing values in the original version of a dataframe\n",
-    "        trialinfo_df = trialinfo_df.copy()\n",
-    "\n",
-    "        # injecting trial-wise data into the trialinfo_df, changing values to 1 or 2 to conform to psytrack's format\n",
-    "        \"\"\"correct -- the accuracy of the choice (1 = correct, 2 = incorrect)\"\"\"\n",
-    "        trialinfo_df.loc[:, 'correct'] = [1 if x else 2 for x in correcttrials_lst]\n",
-    "\n",
-    "        \"\"\"answer -- the correct answer choice \"\"\"\n",
-    "        # changing stim angle value to 0 (- left) or 1 (+ right)\n",
-    "        trialinfo_df.loc[:, 'answer'] = trialinfo_df['stim_angle'].apply(changeVals)\n",
-    "\n",
-    "        # adds a column for when the wheel is turned to the left:\n",
-    "        trialinfo_df.loc[:, \"LeftTurn\"] = ((trialinfo_df[\"stim_angle\"] < 0) & (trialinfo_df[\"correct\"] == 1)) | ((trialinfo_df[\"stim_angle\"] >= 0) & (trialinfo_df[\"correct\"] == 2))\n",
-    "        trialinfo_df.loc[:, \"LeftTurn\"] = trialinfo_df[\"LeftTurn\"].astype(int)\n",
-    "\n",
-    "        # adds signed contrast\n",
-    "        trialinfo_df.loc[:, 'signedContrast'] = trialinfo_df.stim_contrast.values * trialinfo_df.stim_pos_init.values\n",
-    "\n",
-    "        # append trialinfo_df.LeftTurn.values+1 contents to D['y']\n",
-    "        D['y'] = np.append(D['y'], trialinfo_df.LeftTurn.values+1)\n",
-    "\n",
-    "        # s1 is stim_angle and s2 is stim_contrast\n",
-    "        varstoadd = ['stim_angle','stim_contrast']\n",
-    "        outputs = []\n",
-    "        for name in varstoadd:\n",
-    "            if len(trialinfo_df[name].values) == 0:\n",
-    "                print(\"Error: trialinfo_df[name].values is empty.\")\n",
-    "                continue\n",
-    "            else:\n",
-    "                currenttrial = trialinfo_df[name].values\n",
-    "                prevtrial = np.insert(trialinfo_df[name].values[:-1],0,trialinfo_df[name].values[0])\n",
-    "                assert len(currenttrial) == len(prevtrial)\n",
-    "                both = np.stack([currenttrial,prevtrial]).T\n",
-    "                outputs.append(both)\n",
-    "\n",
-    "        # outputs is a list of 2d arrays, each array has 2 columns, the first column is the current trial's value, the second column is the previous trial's value\n",
-    "        # there will be one stack for each variable in varstoadd\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "        # matching cell in demo startins w/ D['inputs'] = dict()\n",
-    "        # D['inputs'] = dict()\n",
-    "        # # as the input variable are put into the dictionary, their names are also changed to s1 and s2 (to work with psytrack, not sure why it only works this way, though?)\n",
-    "        # nameChange_lst = ['s1','s2']\n",
-    "        # for idx,name in enumerate(nameChange_lst):\n",
-    "        #     D['inputs'][name] = outputs[idx]"
+    "# function for changing values to binary(ish) format\n",
+    "def changeVals(x):\n",
+    "    if x < 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2"
    ]
   },
   {
