--- a/ExampleNotebook(markedup).ipynb
+++ b/ExampleNotebook(markedup).ipynb
@@ -954,7 +954,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "psytrack",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -968,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1019,7 +1019,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "7318ee3909646554c6a095e7c8a88e41b51c9591461c62e8fdd55c1907315c5a"
+    "hash": "0ed700301bc8a65c20ca8df8017f580aafbdadd0a88107b0c1c50c4f3e2b4102"
    }
   }
  },
